# OCR_Consertis

./: .gitignore  README.md  pyproject.toml
src/ocr_consertis/: main.py  ocr_processing.py  pdf_processing.py  progress_display.py  status_manager.py
