[project]
name = "ocr-consertis"
version = "0.1.0"
description = ""
authors = [
    {name = "goldsteynAT",email = "danny.093@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytesseract (>=0.3.13,<0.4.0)",
    "pymupdf (>=1.25.3,<2.0.0)",
    "ocrmypdf (>=16.10.0,<17.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]

[tool.poetry]
packages = [{include = "ocr_consertis", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
